{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 45,
  "lineage": "a46f63ca-3ab2-b0cc-dce7-1e49b6e23f54",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat-dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fb2b82f92c3bd675",
            "association_id": "eipassoc-0ddd351579cda0ce3",
            "domain": "vpc",
            "id": "eipalloc-0fb2b82f92c3bd675",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0ebb29b341d7a821e",
            "private_dns": "ip-19-1-10-73.ec2.internal",
            "private_ip": "19.1.10.73",
            "public_dns": "ec2-54-235-131-176.compute-1.amazonaws.com",
            "public_ip": "54.235.131.176",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat"
            },
            "tags_all": {
              "Name": "nat"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat-shared",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0675c7671fbde6bf9",
            "association_id": "eipassoc-06ef77e93f9a68dfb",
            "domain": "vpc",
            "id": "eipalloc-0675c7671fbde6bf9",
            "network_border_group": "us-east-1",
            "network_interface": "eni-002f743ad51b0be02",
            "private_dns": "ip-19-0-2-133.ec2.internal",
            "private_ip": "19.0.2.133",
            "public_dns": "ec2-52-44-89-204.compute-1.amazonaws.com",
            "public_ip": "52.44.89.204",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat-shared"
            },
            "tags_all": {
              "Name": "nat-shared"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw-dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975351939056:internet-gateway/igw-04c525ee3b2cba3cb",
            "id": "igw-04c525ee3b2cba3cb",
            "owner_id": "975351939056",
            "tags": {
              "Name": "dev"
            },
            "tags_all": {
              "Name": "dev"
            },
            "vpc_id": "vpc-01b702edb5051d41e"
          },
          "dependencies": [
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw-shared",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975351939056:internet-gateway/igw-060079d0e0f6c0cab",
            "id": "igw-060079d0e0f6c0cab",
            "owner_id": "975351939056",
            "tags": {
              "Name": "shared"
            },
            "tags_all": {
              "Name": "shared"
            },
            "vpc_id": "vpc-0a5972f448de460b2"
          },
          "dependencies": [
            "aws_vpc.shared"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fb2b82f92c3bd675",
            "association_id": "eipassoc-0ddd351579cda0ce3",
            "connectivity_type": "public",
            "id": "nat-0b443f04f873243ce",
            "network_interface_id": "eni-0ebb29b341d7a821e",
            "private_ip": "19.1.10.73",
            "public_ip": "54.235.131.176",
            "subnet_id": "subnet-03512aa40b704e5a9",
            "tags": {
              "Name": "nat-dev"
            },
            "tags_all": {
              "Name": "nat-dev"
            }
          },
          "dependencies": [
            "aws_eip.nat-dev",
            "aws_internet_gateway.igw-dev",
            "aws_subnet.public-dev-1a",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-shared",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0675c7671fbde6bf9",
            "association_id": "eipassoc-06ef77e93f9a68dfb",
            "connectivity_type": "public",
            "id": "nat-06a75de92687e963a",
            "network_interface_id": "eni-002f743ad51b0be02",
            "private_ip": "19.0.2.133",
            "public_ip": "52.44.89.204",
            "subnet_id": "subnet-095ed690b9bb9a3cd",
            "tags": {
              "Name": "nat-shared"
            },
            "tags_all": {
              "Name": "nat-shared"
            }
          },
          "dependencies": [
            "aws_eip.nat-shared",
            "aws_internet_gateway.igw-shared",
            "aws_subnet.public-shared-1a",
            "aws_vpc.shared"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975351939056:route-table/rtb-03497651b8e23410b",
            "id": "rtb-03497651b8e23410b",
            "owner_id": "975351939056",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b443f04f873243ce",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private"
            },
            "tags_all": {
              "Name": "private"
            },
            "timeouts": null,
            "vpc_id": "vpc-01b702edb5051d41e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat-dev",
            "aws_internet_gateway.igw-dev",
            "aws_nat_gateway.nat-dev",
            "aws_subnet.public-dev-1a",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-shared",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975351939056:route-table/rtb-0e106d083da4e789d",
            "id": "rtb-0e106d083da4e789d",
            "owner_id": "975351939056",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-06a75de92687e963a",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-shared"
            },
            "tags_all": {
              "Name": "private-shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a5972f448de460b2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat-shared",
            "aws_internet_gateway.igw-shared",
            "aws_nat_gateway.nat-shared",
            "aws_subnet.public-shared-1a",
            "aws_vpc.shared"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975351939056:route-table/rtb-090e40ac0a8c9edf6",
            "id": "rtb-090e40ac0a8c9edf6",
            "owner_id": "975351939056",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04c525ee3b2cba3cb",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public"
            },
            "tags_all": {
              "Name": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-01b702edb5051d41e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw-dev",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-shared",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975351939056:route-table/rtb-0aea1014609cb5d2a",
            "id": "rtb-0aea1014609cb5d2a",
            "owner_id": "975351939056",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-060079d0e0f6c0cab",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-shared"
            },
            "tags_all": {
              "Name": "public-shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a5972f448de460b2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw-shared",
            "aws_vpc.shared"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-dev-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05c1baf07a725e180",
            "route_table_id": "rtb-03497651b8e23410b",
            "subnet_id": "subnet-08c45ab4395b087cd"
          },
          "dependencies": [
            "aws_eip.nat-dev",
            "aws_internet_gateway.igw-dev",
            "aws_nat_gateway.nat-dev",
            "aws_route_table.private",
            "aws_subnet.private-dev-1a",
            "aws_subnet.public-dev-1a",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-dev-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-098e977757da274e5",
            "route_table_id": "rtb-03497651b8e23410b",
            "subnet_id": "subnet-072f8f42690eee285"
          },
          "dependencies": [
            "aws_eip.nat-dev",
            "aws_internet_gateway.igw-dev",
            "aws_nat_gateway.nat-dev",
            "aws_route_table.private",
            "aws_subnet.private-dev-1b",
            "aws_subnet.public-dev-1a",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-shared-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c026b97d97e6580b",
            "route_table_id": "rtb-0e106d083da4e789d",
            "subnet_id": "subnet-04cef11a5557fd08c"
          },
          "dependencies": [
            "aws_eip.nat-shared",
            "aws_internet_gateway.igw-shared",
            "aws_nat_gateway.nat-shared",
            "aws_route_table.private-shared",
            "aws_subnet.private-shared-1a",
            "aws_subnet.public-shared-1a",
            "aws_vpc.shared"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-dev-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0da835f3017a1c109",
            "route_table_id": "rtb-090e40ac0a8c9edf6",
            "subnet_id": "subnet-03512aa40b704e5a9"
          },
          "dependencies": [
            "aws_internet_gateway.igw-dev",
            "aws_route_table.public",
            "aws_subnet.public-dev-1a",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-dev-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01dd2a5669763f5f0",
            "route_table_id": "rtb-090e40ac0a8c9edf6",
            "subnet_id": "subnet-0c7e4baa224c86dba"
          },
          "dependencies": [
            "aws_internet_gateway.igw-dev",
            "aws_route_table.public",
            "aws_subnet.public-dev-1b",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-shared-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aea730e9a7f85cb7",
            "route_table_id": "rtb-0aea1014609cb5d2a",
            "subnet_id": "subnet-095ed690b9bb9a3cd"
          },
          "dependencies": [
            "aws_internet_gateway.igw-shared",
            "aws_route_table.public-shared",
            "aws_subnet.public-shared-1a",
            "aws_vpc.shared"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_link",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975351939056:security-group/sg-015ee151f6b2a3df0",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-015ee151f6b2a3df0",
            "ingress": [],
            "name": "vpc-link",
            "name_prefix": "",
            "owner_id": "975351939056",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01b702edb5051d41e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-dev-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975351939056:subnet/subnet-08c45ab4395b087cd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "19.1.128.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08c45ab4395b087cd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "975351939056",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-dev-1a",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "private-dev-1a",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-01b702edb5051d41e"
          },
          "dependencies": [
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-dev-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975351939056:subnet/subnet-072f8f42690eee285",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "19.1.144.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-072f8f42690eee285",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "975351939056",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-dev-1b",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "private-dev-1b",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-01b702edb5051d41e"
          },
          "dependencies": [
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-shared-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975351939056:subnet/subnet-04cef11a5557fd08c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "19.0.128.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04cef11a5557fd08c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "975351939056",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-shared-1a"
            },
            "tags_all": {
              "Name": "private-shared-1a"
            },
            "vpc_id": "vpc-0a5972f448de460b2"
          },
          "dependencies": [
            "aws_vpc.shared"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-dev-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975351939056:subnet/subnet-03512aa40b704e5a9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "19.1.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03512aa40b704e5a9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "975351939056",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-dev-1a",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "public-dev-1a",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-01b702edb5051d41e"
          },
          "dependencies": [
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-dev-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975351939056:subnet/subnet-0c7e4baa224c86dba",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "19.1.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c7e4baa224c86dba",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "975351939056",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-dev-1b",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "public-dev-1b",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-01b702edb5051d41e"
          },
          "dependencies": [
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-shared-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975351939056:subnet/subnet-095ed690b9bb9a3cd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "19.0.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-095ed690b9bb9a3cd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "975351939056",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-shared-1a"
            },
            "tags_all": {
              "Name": "public-shared-1a"
            },
            "vpc_id": "vpc-0a5972f448de460b2"
          },
          "dependencies": [
            "aws_vpc.shared"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975351939056:vpc/vpc-01b702edb5051d41e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "19.1.0.0/16",
            "default_network_acl_id": "acl-0bab841e16dab05fe",
            "default_route_table_id": "rtb-040b4dffc77d9dadd",
            "default_security_group_id": "sg-0bb82b83b6bc31b5c",
            "dhcp_options_id": "dopt-0a5e04d6dcd395df7",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01b702edb5051d41e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-040b4dffc77d9dadd",
            "owner_id": "975351939056",
            "tags": {
              "Name": "dev"
            },
            "tags_all": {
              "Name": "dev"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "shared",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975351939056:vpc/vpc-0a5972f448de460b2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "19.0.0.0/16",
            "default_network_acl_id": "acl-00051f77d2f8f464f",
            "default_route_table_id": "rtb-0e1af59f68c3fd633",
            "default_security_group_id": "sg-005b041564b571300",
            "dhcp_options_id": "dopt-0a5e04d6dcd395df7",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a5972f448de460b2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e1af59f68c3fd633",
            "owner_id": "975351939056",
            "tags": {
              "Name": "shared"
            },
            "tags_all": {
              "Name": "shared"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "peer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "pending-acceptance",
            "id": "pcx-042e6e701d08b55ed",
            "peer_owner_id": "975351939056",
            "peer_region": "us-east-1",
            "peer_vpc_id": "vpc-0a5972f448de460b2",
            "requester": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "vpc_id": "vpc-01b702edb5051d41e"
          },
          "dependencies": [
            "aws_vpc.dev",
            "aws_vpc.shared"
          ]
        }
      ]
    }
  ]
}